add target=_blank rel=noopener noreferrer for each link

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             </div>
         </section>
 
-        <!-- logo wrapper -->
+        <!-- heading wrapper -->
         <section class="section heading-wraper">
             <h1 class="section__heading-text">Découvrez votre facture d'électricité expliquée en vidéo</h1>
         </section>
@@ -238,7 +238,7 @@
         <!-- invoice-information -->
         <section class="section">
             <div class="section__invoice-wrapper">
-                <a href="http://" class="section__invoice-wrapper__cta-btn">
+                <a href="http://" target="_blank" rel="noopener noreferrer" class="section__invoice-wrapper__cta-btn">
                     Accéder à la vidéo de ma facture
                 </a>
 
@@ -260,12 +260,12 @@
                 <p class="section__footer-social-media__follow-us-text">Suivez nous sur</p>
                 <div class="section__footer-social-media__links">
                     <!-- linkedin -->
-                    <a href="" class="section__footer-social-media__links__url linkedin">
+                    <a href="" target="_blank" rel="noopener noreferrer" class="section__footer-social-media__links__url linkedin">
                         <img src="./assets/linkedin.png" alt="Linkedin">
                     </a>
 
                     <!-- twitter -->
-                    <a href="" class="section__footer-social-media__links__url twitter">
+                    <a href="" target="_blank" rel="noopener noreferrer" class="section__footer-social-media__links__url twitter">
                         <img src="./assets/twitter.png" alt="X">
                     </a>
                 </div>
@@ -277,7 +277,7 @@
                     SOREGIES, Société Anonyme d&apos;Economie Mixte Locale à Directoire et Conseil de surveillance immatriculée au  RCS de Poitiers <br> <br> sous le n° 450 889 225, au capital de 25.726.600 euros, dont le siège social est situé au 78 avenue Jacques Cœur Poitiers
                 </p>
 
-                <a href="" class="section__footer-copyright__unsubscribe-link">Se désinscrire</a>
+                <a href="" target="_blank" rel="noopener noreferrer" class="section__footer-copyright__unsubscribe-link">Se désinscrire</a>
             </div>
         </section>
     </main>
